syntax = "proto3";
package com.example.kotlin_basic.proto;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Person{
  string name = 1;
  int32 id = 2; // unique id number for this person
  optional string email = 3;

  enum PhoneType{
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber{
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

// our address book file is just one of these
message AddressBook{
  repeated Person people = 1;
}